+Login view Added

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 .idea/
 desktop-app/node_modules/
+desktop-app/node_modules/.bin/acorn.cmd
+desktop-app/node_modules/tailwindcss/lib/util/cloneNodes.js
+desktop-app/node_modules/tailwindcss/defaultConfig.js
+*.ps1
