--- a/desktop-app/package.json
+++ b/desktop-app/package.json
@@ -12,6 +12,7 @@
     "electron": "^23.2.0"
   },
   "dependencies": {
+    "check-internet-connected": "^2.0.6",
     "electronmon": "^2.0.2",
     "superagent": "^8.0.9",
     "to-regex-range": "^5.0.1",
