Database Migrations added

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ desktop-app/node_modules/tailwindcss/lib/util/cloneNodes.js
 desktop-app/node_modules/tailwindcss/defaultConfig.js
 *.ps1
 api/vendor/
+/api/maintenanceLock.lock
+/api/migrationLock.lock
+/api/.env
