--- a/api/composer.json
+++ b/api/composer.json
@@ -15,6 +15,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "vlucas/phpdotenv": "^5.5@dev"
+        "vlucas/phpdotenv": "^5.5@dev",
+      "ext-pdo": "*"
     }
 }
