--- a/api/.htaccess
+++ b/api/.htaccess
@@ -1,2 +1,3 @@
 RewriteEngine on
-    RewriteRule ^(.*)$ /public/$1 [NC,L]
+#    RewriteRule ^(.*)$ /public/$1 [NC,L]
+    RewriteRule ^(.*)$ /public/$1 [L]
