--- a/website/public/.htaccess
+++ b/website/public/.htaccess
@@ -3,4 +3,4 @@ RewriteEngine On
     RewriteRule ^index\.php$ - [L]
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^([^\.]+)$ $1.html [L]
+    RewriteRule . /index.php [L]
