--- a/website/public/.htaccess
+++ b/website/public/.htaccess
@@ -1,6 +1,11 @@
 RewriteEngine On
     RewriteBase /
     RewriteRule ^index\.php$ - [L]
+
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_URI} (.+)/$
+    RewriteRule ^(.*)/$ /$1 [R=301,L]
+
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule . /index.php [L]
+    RewriteRule ^(.*) /index.php [L]
