--- a/website/composer.json
+++ b/website/composer.json
@@ -4,6 +4,7 @@
     "type": "project",
     "autoload": {
         "psr-4": {
+            "LogicLeap\\PhpServerCore\\": "./core/",
             "LogicLeap\\StockManagement\\": "./"
         }
     },
