--- a/vue-web-design/package.json
+++ b/vue-web-design/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.13",
+    "@heroicons/vue": "^2.0.18",
     "tw-elements": "^1.0.0-beta2",
     "vue": "^3.2.47",
     "vue-router": "^4.2.1"
