--- a/api/composer.json
+++ b/api/composer.json
@@ -17,6 +17,7 @@
     "minimum-stability": "dev",
     "require": {
         "vlucas/phpdotenv": "^5.5@dev",
-      "ext-pdo": "*"
+      "ext-pdo": "*",
+        "dompdf/dompdf": "dev-master"
     }
 }
