--- a/accounting-web/package.json
+++ b/accounting-web/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "@heroicons/vue": "^2.0.18",
+    "oh-vue-icons": "^1.0.0-rc3",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
