--- a/vue-web-design/package.json
+++ b/vue-web-design/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.13",
     "@heroicons/vue": "^2.0.18",
+    "@vueuse/core": "^10.3.0",
     "chart.js": "^4.3.0",
     "tw-elements": "^1.0.0-beta2",
     "vue": "^3.2.47",
