--- a/accounting-web/package.json
+++ b/accounting-web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.0.18",
+    "@vueuse/core": "^10.3.0",
     "oh-vue-icons": "^1.0.0-rc3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
