--- a/accounting-web/package.json
+++ b/accounting-web/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.0.18",
+    "@vueuse/components": "^10.3.0",
     "@vueuse/core": "^10.3.0",
+    "element-plus": "^2.3.9",
     "oh-vue-icons": "^1.0.0-rc3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
@@ -21,6 +23,7 @@
     "daisyui": "^3.5.1",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
+    "unplugin-element-plus": "^0.8.0",
     "vite": "^4.4.5"
   }
 }
