--- a/accounting-web/package.json
+++ b/accounting-web/package.json
@@ -14,8 +14,10 @@
     "@vueuse/core": "^10.3.0",
     "element-plus": "^2.3.9",
     "oh-vue-icons": "^1.0.0-rc3",
+    "ts-toolbelt": "^9.6.0",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
