--- a/accounting-web/package.json
+++ b/accounting-web/package.json
@@ -12,6 +12,7 @@
     "@heroicons/vue": "^2.0.18",
     "@vueuse/components": "^10.3.0",
     "@vueuse/core": "^10.3.0",
+    "decimal.js": "^10.4.3",
     "element-plus": "^2.3.9",
     "oh-vue-icons": "^1.0.0-rc3",
     "ts-toolbelt": "^9.6.0",
