--- a/accounting-web/package.json
+++ b/accounting-web/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
+    "@vitejs/plugin-vue-jsx": "^3.0.2",
     "autoprefixer": "^10.4.14",
     "daisyui": "^3.5.1",
     "postcss": "^8.4.27",
