Chart of accounts > Add new Account > Filter by tax id

--- a/accounting-web/package.json
+++ b/accounting-web/package.json
@@ -14,9 +14,11 @@
     "@vueuse/components": "^10.3.0",
     "@vueuse/core": "^10.3.0",
     "@vueuse/math": "^10.3.0",
+    "@vueuse/router": "^10.3.0",
     "decimal.js": "^10.4.3",
     "element-plus": "^2.3.9",
     "fuse.js": "^6.6.2",
+    "lodash": "^4.17.21",
     "oh-vue-icons": "^1.0.0-rc3",
     "ts-toolbelt": "^9.6.0",
     "vue": "^3.3.4",
