--- a/accounting-web/package.json
+++ b/accounting-web/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite --force",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
@@ -28,11 +30,14 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
+    "@vue/test-utils": "^2.4.1",
     "autoprefixer": "^10.4.14",
     "daisyui": "^3.5.1",
+    "happy-dom": "^10.10.4",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "unplugin-element-plus": "^0.8.0",
-    "vite": "^4.4.9"
+    "vite": "^4.4.9",
+    "vitest": "^0.34.2"
   }
 }
