--- a/.github/workflows/frontent-tests.yml
+++ b/.github/workflows/frontent-tests.yml
@@ -13,9 +13,6 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    defaults:
-       run:
-         working-directory: ./accounting_web/
     strategy:
       matrix:
         node-version: [18.x]
@@ -28,5 +25,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: './accounting_web/package-lock.json'
     - run: npm ci
     - run: npm run test
