--- a/.github/workflows/frontent-tests.yml
+++ b/.github/workflows/frontent-tests.yml
@@ -26,5 +26,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
         cache-dependency-path: './accounting-web/package-lock.json'
-    - run: npm ci
-    - run: npm run test
+    - name: Run Accounting frontend tests
+      working-directory: './accounting-web'
+      run: npm ci
+      run: npm run test
