--- a/accounting-web/package.json
+++ b/accounting-web/package.json
@@ -34,6 +34,7 @@
     "autoprefixer": "^10.4.14",
     "daisyui": "^3.5.1",
     "happy-dom": "^10.10.4",
+    "msw": "^1.2.3",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "unplugin-element-plus": "^0.8.0",
