--- a/api/public/.htaccess
+++ b/api/public/.htaccess
@@ -1,6 +1,3 @@
 RewriteEngine On
     RewriteBase /
-    RewriteRule ^index\.php$ - [L]
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule . /index.php [L]
+    RewriteRule ^api(.*)$ /api/$1 [L]
