--- a/api/public/.htaccess
+++ b/api/public/.htaccess
@@ -1,3 +1,5 @@
 RewriteEngine On
     RewriteBase /
     RewriteRule ^api/(.*)$ api/index.php [L]
+    RewriteRule ^accounting/(.*)$ accounting/index.html [L]
+    RewriteRule ^(.*)$ index.html [L]
