--- a/api/public/.htaccess
+++ b/api/public/.htaccess
@@ -1,10 +1,19 @@
 RewriteEngine On
     RewriteBase /
-    RewriteRule ^api/(.*)$ api/index.php [L]
-    
-    RewriteBase /accounting/
 
-    # Redirect all requests to index.html except existing files or directories
+    # Rewrite requests for /api/something to api/index.php
+    RewriteRule ^api/(.*)$ api/index.php [L]
+
+    # Redirect requests for static assets (like js, css, images) to the actual file
+    RewriteCond %{REQUEST_FILENAME} -f
+    RewriteCond %{REQUEST_URI} \.(js|css|png|jpg|jpeg|gif|svg)$
+    RewriteRule ^ - [L]
+
+    # Rewrite requests for /accounting to accounting/index.html
+    RewriteRule ^accounting$ accounting/index.html [L]
+    RewriteRule ^accounting/(.*)$ accounting/index.html [L]
+
+    # Redirect all other requests to index.html
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule . /accounting/index.html [L]
+    RewriteRule . index.html [L]
