--- a/api/.env.example
+++ b/api/.env.example
@@ -4,3 +4,5 @@ DB_PASSWORD=
 DB_NAME=laundry_database
 
 JWT_SECRET=GZtElcVe4sueFUexVzxgGirFkGKuiP79
+
+SYSTEM_DOMAIN=newsytem.logicleapsolutions.lk
