Localization Notifications Done

--- a/cashier-web/package.json
+++ b/cashier-web/package.json
@@ -16,6 +16,7 @@
     "@vueuse/router": "^10.4.1",
     "decimal.js": "^10.4.3",
     "element-plus": "^2.3.12",
+    "theme-change": "^2.5.0",
     "unplugin-element-plus": "^0.8.0",
     "vue": "^3.3.4",
     "vue-i18n": "^9.3.0-beta.27",
