--- a/cashier-web/package.json
+++ b/cashier-web/package.json
@@ -20,7 +20,8 @@
     "unplugin-element-plus": "^0.8.0",
     "vue": "^3.3.4",
     "vue-i18n": "^9.3.0-beta.27",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vue-virtual-scroller": "^2.0.0-beta.8"
   },
   "devDependencies": {
     "@iconify-json/mdi": "^1.1.54",
